--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-0.1.1 (unreleased)
+0.2.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Don't force subclassing to create a queue, you can just instantiate one.
 
 
 0.1.0 (2017-09-10)
