--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-0.3.1 (unreleased)
+0.4.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Add dpq_scheduler, a replacement for celery beat.
 
 
 0.3.0 (2019-03-19)
