--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 0.4.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Add a postgres application_name to the worker.
 
 
 0.4.1 (2019-05-16)
