Fixed failed task processing
The run_available_tasks inner loop was breaking right after a task
failed, instead of doing another loop with that task excluded like it's
supposed to.

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 0.4.3 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fix failed task processing to allow progress on other tasks when there is a
+  task consistently failing.
 
 
 0.4.2 (2019-05-17)
