Remove job id payload from NOTIFY notifications
This will change the number of events received on a listening channel.
Only one notification per txn per channel will be sent as opposed to the
one notification per job created before this change.

That's ok because we only need the notification to wake up the workers.
The jobs are all read and scheduled out of the db.

https://github.com/SweetProcess/django-pg-queue/commit/696b778b57cb4adac301949108133912cc7df5cc

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 - Changed signature of Queue.run_job. It now returns None or a 3-tuple of
   (job, retval, None) or (job, None, exception).
 - Fix crash when a job raises an exception in a transaction.on_commit function.
+- Remove payload from NOTIFY notifications. It was not actually used.
 
 
 0.4.4 (2021-04-19)
