--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.8.1 (2021-07-19)
+==================
+
+- Fixes worker crash on exception in task transaction on_commit thanks @gavinwahl
+
+
 0.8.0 (2021-06-18)
 ==================
 
